# queen

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  justfile  package-lock.json
src/: main.rs
src/main/: Cargo.toml  Cargo.toml2  Dioxus.toml
src/main/src/: main.rs
src/primitives/: Cargo.toml
src/primitives/src/: primitives.rs
styles/: cards.css  test.css
