cargo-features = ["named-profiles"]

[workspace]
members = ["src/*"]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
